styles.css
table.MainTable{
    width: 100% !important;
    max-width: 1800px;
}



/* Set dimensions on table headers */
.gridCell[id*="headerreg_value"],
.gridCell[id*="headerreg_unit"],
.gridCell[id*="headertimecode"] {
	width: 70px !important;
}

.gridCell.ColumnZoom {
	width: 50px !important;
}

.gridCell[id*="headerdescription"],
.gridCell[id*="headerwork_order"] {
	width: auto !important;
}



/* Hide original work order item */
tr.ListItem td:nth-child(5) > div:first-child,
tr.AltListItem td:nth-child(5) > div:first-child {
	display: none;
}



/* Format custom work order text */
.custom-project-name {
	white-space: normal;
}

.custom-customer-name {
	font-weight: bold;
}



/* Style hour cells with zero registered hours */
.custom-nonzero-hours {
	font-weight: bold;
}

.custom-zero-hours {
	opacity: 0.5;
}




/* Format sum cols and rows */
.LastVisibleHeaderCell,
.SumItem,
.GridCell:nth-last-child(2) {
	font-weight: bold !important;
}

.SumItem td {
	padding-top: 5px !important;
	padding-bottom: 5px !important;
	border-top: 1px solid black !important;
}



/* Make green backgrounds (for holidays and weekends) red instead of green */
.GridCell[style*="background-color"][style*="#00ff00"] {
	background-color: #ffe0e0 !important;
}

